--- a/index.html
+++ b/index.html
@@ -3,32 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Portal</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Stylish HTML Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+        p {
+            color: #666;
+            line-height: 1.6;
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #0056b3;
+        }
+        .image-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .image-container img {
+            max-width: 100%;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        
-        <h1>Welcome to Movie Portal</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section class="main-content">
-        <!-- Display posts and movie links here -->
-    </section>
+<div class="container">
+    <h1>Welcome to My Stylish Website</h1>
+    <p>This is a demo page showcasing a stylish HTML layout with CSS.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum finibus aliquet augue, sed consequat nisi.</p>
+    <p>Click the button below to explore more:</p>
+    <a href="#" class="button">Explore</a>
+    <div class="image-container">
+        <img src="https://via.placeholder.com/400" alt="Stylish Image">
+    </div>
+</div>
 
-    <footer>
-        <p>&copy; 2024 Movie Portal. All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
-
